[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Common code for safe_vault and safe_core"
documentation = "http://maidsafe.github.io/safe_network_common/latest/"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "safe_network_common"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network_common"
version = "0.0.2"

[dependencies]
maidsafe_utilities = "~0.4.0"
rand = "~0.3.14"
rustc-serialize = "~0.3.18"
sodiumoxide = "~0.0.9"
xor_name = "~0.1.0"

[dependencies.clippy]
optional = true
version = "~0.0.49"
