[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Common code for safe_vault and safe_core"
documentation = "http://docs.maidsafe.net/safe_network_common/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "safe_network_common"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network_common"
version = "0.5.0"

[dependencies]
clippy = {version = "~0.0.79", optional = true}
maidsafe_utilities = "~0.8.0"
rand = "~0.3.14"
rustc-serialize = "~0.3.19"
sodiumoxide = "=0.0.10"
routing = "~0.24.0"
